@@ -1,5 +1,5 @@
-===== cocos2d for iPhone v0.99.1 Release Notes =====
+===== cocos2d for iPhone v0.99.2 Release Notes =====
 
 
 Please, see the online document:
-http://www.cocos2d-iphone.org/wiki/doku.php/release_notes:0_99_1
+http://www.cocos2d-iphone.org/wiki/doku.php/release_notes:0_99_2
